aanpassing index.hatml

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Charlotte D'herde</title>
 </head>
 <body>
-    
+    <h1>Charlotte D'herde</h1>
 </body>
 </html>
